force-app/main/default/objects/Expence__c/Expence__c.object-meta.xml
<CustomObject>
    <label>Expence</label>
    <nameField>
        <label>Expense Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>