force-app/main/default/objects/Expence__c/fields/Expence_Type__c.field-meta.xml
<CustomField>
    <fullName>Expence_Type__c</fullName>
    <label>Expence Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accommodation</fullName>
                <default>true</default>
                <label>Accommodation</label>
            </value>
            <value>
                <fullName>Flights</fullName>
            </value>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Food &amp; Drinks</fullName>
            </value>
            <value>
                <fullName>Other.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>