force-app/main/default/objects/Expence__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <referenceTo>Arte_Project__c</referenceTo>
    <relationshipLabel>Expences</relationshipLabel>
    <relationshipName>Expences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>