force-app/main/default/objects/Expence__c/fields/Total_Spent__c.field-meta.xml
<CustomField>
    <fullName>Total_Spent__c</fullName>
    <label>Total Spent</label>
    <precision>8</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>